transport/network/src/snapshots/hopr_transport_network__track__tests__after_readd.snap
---
source: transport/network/src/track.rs
expression: after_snapshot
---
packetsOut: 0
packetsIn: 0
bytesOut: 0
bytesIn: 0
