transport/network/src/snapshots/hopr_transport_network__track__tests__before_remove.snap
---
source: transport/network/src/track.rs
expression: before_snapshot
---
packetsOut: 1
packetsIn: 0
bytesOut: 1000
bytesIn: 0
