transport/network/src/snapshots/hopr_transport_network__track__tests__peer_tracker_all_packet_stats_should_return_all_peers.snap
---
source: transport/network/src/track.rs
expression: snapshots
---
- packetsOut: 1
  packetsIn: 0
  bytesOut: 100
  bytesIn: 0
- packetsOut: 0
  packetsIn: 1
  bytesOut: 0
  bytesIn: 200
