transport/network/src/snapshots/hopr_transport_network__track__tests__peer_tracker_should_provide_packet_stats_for_tracked_peer.snap
---
source: transport/network/src/track.rs
expression: snapshot
---
packetsOut: 1
packetsIn: 1
bytesOut: 100
bytesIn: 50
